--- a/PersonalTrainingWebsite.html
+++ b/PersonalTrainingWebsite.html
@@ -33,7 +33,7 @@
         
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                PT website <strong>Training app</strong>
+                PT<strong>Training app</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Small family run company</p>
             <img src="img/Fitness2.jpg" alt="" class="intro__img">
