--- a/PersonalTrainingWebsite.html
+++ b/PersonalTrainingWebsite.html
@@ -35,7 +35,7 @@
             <h1 class="section__title section__title--intro">
                 PT<strong>Training app</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Tools and data to push you in training</p>
+            <p class="section__subtitle section__subtitle--intro" style="width: 110%;">Tools and data to push you in training</p>
             <img src="img/Fitness2.jpg" alt="" class="intro__img">
         </section>
         
