--- a/PersonalTrainingWebsite.html
+++ b/PersonalTrainingWebsite.html
@@ -25,7 +25,7 @@
                 <ul class="nav__list">
                     <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="index.html#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="index.html#about" class="nav__link">About Me</a></li>
                     <li class="nav__item"><a href="index.html#work" class="nav__link">Projects</a></li>
                 </ul>
             </nav>
@@ -35,7 +35,7 @@
             <h1 class="section__title section__title--intro">
                 PT<strong>Training app</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro" style="font-size: 0.9rem;">Tools and data to push you in training</p>
+            <p class="section__subtitle section__subtitle--intro" style="font-size: 1rem;">Tools and data to push you in training</p>
             <img src="img/Fitness2.jpg" alt="" class="intro__img">
         </section>
         
