--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <h3>Python</h3>
                 </br>
                 <li>Algorithms and Methods!</li>
+                <li>Another Change</li>
             </div> <!-- / service -->
         </div> <!-- / services -->
 
