--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 </br>
                 <li>Algorithms and Methods!</li>
                 <li>Another Change</li>
+                <li>Another, another Change</li>
             </div> <!-- / service -->
         </div> <!-- / services -->
 
