--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Daniel To</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+        <p class="section__subtitle section__subtitle--intro">Full Stack Developer</p>
         <img src="img/profilepic.jpeg" alt="a picture of Daniel To smiling" class="intro__img">
     </section>
-
 
     <!-- My services -->
     <section class="my-services" id="services">
@@ -71,63 +70,39 @@
                 <li>C#</li>
             </div> <!-- / service -->
 
-            <div class="service">
-                <h3>Python</h3>
+            <!-- <h3>Python</h3>
                 </br>
                 <li>Algorithms and Methods!</li>
-                <li>Another Change</li>
-                <li>Another, another Change</li>
-            </div> <!-- / service -->
-        </div> <!-- / services -->
+            </div>
+        </div>  -->
 
-        <a href="#work" class="btn">My Work</a>
+            <a href="#work" class="btn">My Work</a>
     </section>
 
 
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Front-end development student based out of Southwark,
-            London, UK</p>
+        <p class="section__subtitle section__subtitle--about">Full Stack Developer based out of Hong Kong</p>
 
         <div class="about-me__body">
-            <p>The pandemic has really pushed the reset button for me and gave me the chance to reconsider life goals
-                that motivate me. Ever since school I never considered myself academic enough to study Maths as it was a
-                "Hard" subject that only the top students do. Well at least thats I thought in my head.
-            </p>
-            <p>I was working as I personal training most recently in a small luxuary private gym.
-                There was a small team of 6 personal trainers and each of us were doing 6-8, 1 hour sessions a day, 6
-                days a week.
-                Then on March 16th during an evening shift the government announced full lockdown and I was put on
-                furlough
-                for the indefinite future.</p>
+            <p>During the first lockdown in October 2020, I began my first coding course. My brother who transitioned
+                from
+                being a social worker to software engineer sent me courses and learning materials. He did an intensive
+                bootcamp
+                before the lockdown happened and his job wasn’t affected. Because I was furloughed and looking to up
+                skill and
+                keep myself proactive, I went through the courses. When the gyms opened again, because I was working as
+                a
+                personal trainer, I continued to learn code by doing more courses for the eventual transition into
+                software
+                engineering. Now I’m fully focusing on building projects and working with the tutors and recruitment
+                team at IT
+                switch to build my portfolio and continue honing in on the skills learnt from the modules and courses
+                completed.
 
-            <p></p>
-            <p>Fast forward several months and via communications on group chat could see times were hard and the boss
-                called me in for several meetings
-                which ultimately lead to him letting me go with an end to furlough pay in the next couple months.
-                This got me exploring other career paths and I worked for a friend fitting furniture in the meantime.
-            </p>
-            <p>My brother who was previously a social worker made a career switch into coding way before the pandemic
-                and I could
-                see how web developers were thriving and the jobs were unaffected by the pandemic. After some research I
-                enrolled on
-                a e-learning platform called Scrimba were I learned basic HTML, CSS and Javascript. I'm now doing
-                modules in more advanced
-                Javascript and advanced React and building better projects with more interactivity, forms and better
-                functionality overall.
-            </p>
-            <p>All this time later i'm now getting comfortable with coding and now feel ready to do an internship or a
-                graduate junior web
-                developer role and continue to develop the skills to become a senior full stack developer and make the
-                career switch. I would feel proud
-                to make this career switch and feel becoming a software engineer is more aligned with my skill set and
-                my literacy. I've always had a natural
-                understanding of maths in school and I was always quick with understanding equations and mathmatical
-                concepts but was never aware of
-                how it translated to work in the real world. Coding has exercised that logic again for me and I enjoy
-                tackling mathmatical logic
-                problems and have the fortitude and perseverance to understand and solve these problem.
+                I’m fully committed and work 9-5 building projects, coding and looking for entry level roles to offer
+                value and work hard.
 
             </p>
         </div>
@@ -151,9 +126,7 @@
                 <img src="https://images.unsplash.com/photo-1521791055366-0d553872125f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
                     alt="" class="portfolio__img">
             </a>
-
             <!-- Portfolio item 03 -->
-
 
             <a href="TaoCandleWebsite.html" class="portfolio__item">
                 <img src="img/CandleProject.jpg" alt="" class="portfolio__img">
@@ -203,11 +176,10 @@
         </div>
     </section>
 
-
     <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="daniel_to_2@hotmail.com" class="footer__link">daniel_to_2@hotmail.com</a>
+        <a href="danielto548@gmail.com" class="footer__link">danielto548@gmail.com</a>
         <ul class="social-list">
             <!-- <li class="social-list__item">
                     <a class="social-list__link" href="https://codepen.io">
