--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>  -->
 
-            <a href="#work" class="btn">My Work</a>
+            <a href="#work" class="btn">My Portfolio</a>
     </section>
 
 
@@ -103,7 +103,6 @@
 
                 I’m fully committed and work 9-5 building projects, coding and looking for entry level roles to offer
                 value and work hard.
-
             </p>
         </div>
 
