--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li>React</li>
 
             </div> <!-- / service -->
-
+            </br>
             <div class="service">
                 <h3>Full stack</h3>
                 </br>
@@ -69,14 +69,16 @@
                 <li>Python</li>
                 <li>C#</li>
             </div> <!-- / service -->
-
-            <!-- <h3>Python</h3>
+            </br>
+            <div class="service">
+                <h3>Python</h3>
                 </br>
-                <li>Algorithms and Methods!</li>
+                <li>Algorithms and Methods</li>
             </div>
-        </div>  -->
+        </div><!-- / service -->
+        </div>
 
-            <a href="#work" class="btn">My Portfolio</a>
+        <a href="#work" class="btn">My Portfolio</a>
     </section>
 
 
@@ -86,7 +88,7 @@
         <p class="section__subtitle section__subtitle--about">Full Stack Developer based out of Hong Kong</p>
 
         <div class="about-me__body">
-            <p>During the first lockdown in October 2020, I began my first coding course. My brother who transitioned
+            <p> During the first lockdown in October 2020, I began my first coding course. My brother who transitioned
                 from
                 being a social worker to software engineer sent me courses and learning materials. He did an intensive
                 bootcamp
@@ -96,7 +98,10 @@
                 a
                 personal trainer, I continued to learn code by doing more courses for the eventual transition into
                 software
-                engineering. Now I’m fully focusing on building projects and working with the tutors and recruitment
+                engineering.
+            </p>
+            <p>
+                Now I’m fully focusing on building projects and working with the tutors and recruitment
                 team at IT
                 switch to build my portfolio and continue honing in on the skills learnt from the modules and courses
                 completed.
@@ -104,9 +109,9 @@
                 I’m fully committed and work 9-5 building projects, coding and looking for entry level roles to offer
                 value and work hard.
             </p>
-        </div>
 
-        <!-- <img src="img/PortfolioPic.jpg" alt="Jane leaning against a bus" class="about-me__img"> -->
+        </div>
+        <img src="img/PortfolioPic.jpg" alt="Jane leaning against a bus" class="about-me__img">
     </section>
 
     <!-- My Work -->
