--- a/MapsProject.html
+++ b/MapsProject.html
@@ -38,20 +38,17 @@
 
     <section class="intro">
         <h1 class="section__title section__title--intro">
-            PT website <strong>Training Tool</strong>
+            Maps <strong>API, JQUERY, PHP, AJAX project</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Helping people train like professionals</p>
-        <img src="img/portfolio-01.jpg" alt="" class="intro__img">
+        <p class="section__subtitle section__subtitle--intro">Geonames, OpenCage and other API's to present Info country
+            input from client</p>
+        <img src="img/worldGlobe.jpg" alt="" class="intro__img">
     </section>
 
+    <p class="website"><a href="http://www.danielto.co.uk/">Click here for website</a></p>
+    </br>
     <div class="portfolio-item-individual">
-        <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas
-            sapiente voluptate, magnam ipsum eius earum?</p>
-        <img src="img/portfolio-details.jpg" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti
-            fugiat ducimus consequatur incidunt?</p>
-        <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas
-            sapiente voluptate, magnam ipsum eius earum?</p>
+        <p>Using PHP, Curl. AJAX and jquery to pull in several API's to create a one page project</p>
     </div>
 
 
