--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
             </a>
 
             <!-- Portfolio item 06 -->
-            <!-- <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="img/portfolio-06.jpg" alt="" class="portfolio__img">
-                </a> -->
+            <a href="MapsProject.html" class="portfolio__item">
+                <img src="img/worldGlobe.jpg" alt="" class="portfolio__img">
+            </a>
 
             <!-- Portfolio item 07 -->
             <!-- <a href="portfolio-item.html" class="portfolio__item">
