Meme Project Commented out

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 
         <div class="portfolio">
             <!-- Portfolio item 01 -->
-            <a href="MemeGenerator.html" class="portfolio__item">
+            <!-- <a href="MemeGenerator.html" class="portfolio__item">
                 <img src="img/MemePic.jpeg" alt="" class="portfolio__img">
-            </a>
+            </a> -->
 
             <!-- Portfolio item 02 -->
             <a href="ParqForm.html" class="portfolio__item">
