--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Daniel To</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Full Stack Developer</p>
+        <p class="section__subtitle section__subtitle--intro">Financial Data Prediction Specialist</p>
         <img src="img/profilepic.jpeg" alt="a picture of Daniel To smiling" class="intro__img">
     </section>
 
@@ -49,31 +49,35 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>Front-End-Development</h3>
+                <h3>Athletic Pursuit</h3>
                 </br>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript ES6</li>
-                <li>React</li>
+                <li>Strength</li>
+                <li>Body Composition</li>
+                <li>Mobility Restoration</li>
+                <li>Nutrition</li>
 
             </div> <!-- / service -->
             </br>
             <div class="service">
-                <h3>Full stack</h3>
+                <h3>Apex Living Spaces</h3>
                 </br>
-                <li>PHP</li>
-                <li>SQL</li>
-                <li>PHP</li>
-                <li>API</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>C#</li>
+                <li>Co Living Spaces for Professionals in Singapore</li>
+                
             </div> <!-- / service -->
             </br>
             <div class="service">
-                <h3>Python</h3>
+                <h3>Data Science Prediction</h3>
                 </br>
-                <li>Algorithms and Methods</li>
+                <li>Linear Regression</li>
+                <li>Logistic Regression</li>
+                <li>K-Means Clustering</li>
+                <li>K-Fold Cross-Validation</li>
+                <li>Decision Trees</li>
+                <li>Random Forests</li>
+                <li>PCA & t-SNE (Dimensionality reduction techniques)</li>
+                <li>Time Series Analysis</li>
+                <li>Statistics</li>
+            
             </div>
         </div><!-- / service -->
         </div>
@@ -85,29 +89,13 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Full Stack Developer based out of Hong Kong</p>
+        <p class="section__subtitle section__subtitle--about">Coach and Business Developer</p>
 
         <div class="about-me__body">
-            <p> During the first lockdown in October 2020, I began my first coding course. My brother who transitioned
-                from
-                being a social worker to software engineer sent me courses and learning materials. He did an intensive
-                bootcamp
-                before the lockdown happened and his job wasn’t affected. Because I was furloughed and looking to up
-                skill and
-                keep myself proactive, I went through the courses. When the gyms opened again, because I was working as
-                a
-                personal trainer, I continued to learn code by doing more courses for the eventual transition into
-                software
-                engineering.
-            </p>
-            <p>
-                Now I’m fully focusing on building projects and working with the tutors and recruitment
-                team at IT
-                switch to build my portfolio and continue honing in on the skills learnt from the modules and courses
-                completed.
-
-                I’m fully committed and work 9-5 building projects, coding and looking for entry level roles to offer
-                value and work hard.
+            <p> I am a dedicated strength and conditioning coach, driven to help others achieve their physical and personal best.
+                 As a lifelong learner, I constantly seek out new skills and knowledge, applying them to develop innovative ventures in fitness, 
+                financial data science, and co-living under my brand, Apex Holdings. As a forward-thinking Business Developer, 
+                I focus on fostering both physical and financial growth, building ventures that lead to long-term success and meaningful impact.
             </p>
 
         </div>
