--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Daniel To</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">Financial Data Prediction Specialist</p>
+        <p class="section__subtitle section__subtitle--intro">Coach and Business Developer</p>
         <img src="img/profilepic.jpeg" alt="a picture of Daniel To smiling" class="intro__img">
     </section>
 
